<resources>
    <string name="app_name">Beender</string>
    <string name="welcome_to">Welcome to</string>
    <string name="made_by_and_for_travelers_to_spread_the_wor_l_d">Made by and for travelers to spread the wor(l)d</string>
    <string name="next">Next</string>
    <string name="still_working_on_it_nwill_be_available_soon_stay_tuned">Still working on it...\nWill be available soon, stay tuned!</string>
    <string name="still_working_on_it_nwill_be_available_soon">Still working on it...\nWill be available soon!</string>
    <string name="facebook_app_id" translatable="false">305987373181741</string>
    <string name="create_a_beender_profile_find_all_your_itineraries_in_one_place">Create a Beender profile,\nFind all your itineraries in one place</string>
    <string name="sign_up_via_facebook">Sign Up Via Facebook</string>
    <string name="terms_message"><![CDATA[<p>By registering you are agree to <b><span style="color:#000000"><a href="terms.com">Term of Use</a></span></b> and <b><span style="color:#000000"><a href="privacy.com">Privacy Policy</a></span></b></p>]]></string>
    <string name="beenders">Beenders</string>
    <string name="write_something_about_yourself">...Write something about yourself...</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="log_out_">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_to_your_profile">Welcome to your profile!</string>
    <string name="user_bio_tutorial_message">You can write something about yourself, so people will know what kind of traveler are you</string>
    <string name="ok_next">OK, next</string>
    <string name="edit_your_profile">Edit you profile</string>
    <string name="profile_edit_tutorial_message">You can always edit your profile and you existing itineraries</string>
    <string name="add_new_trip">Add New Trip</string>
    <string name="select_images">Select images</string>
    <string name="another_beender_coming_right_up">Another Beender\nComing Right Up...</string>
    <string name="days">Days</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="public_">Public</string>
    <string name="private_">Private</string>
    <string name="delete_itinerary">Delete Itinerary</string>
    <string name="trip_delete_dialog_message">This itinerary will be deleted and you won\'t be able to find it anymore.\nYou can also edit this itinerary, if you just want to change something.</string>
    <string name="choose_tags_for_this_trip">Choose #tags for this trip</string>
    <string name="done">Done</string>
    <string name="_"> </string>
    <string name="add_another_beender">Add another Beender</string>
    <string name="add_your_own_comment">Add your own comment</string>
    <string name="welcome_to_your_trip">Welcome to your trip</string>
    <string name="trip_tags_message">Give your trip personal touch!\nChoose the #tags that most describe this trip.</string>
    <string name="switch_to_list_view">Switch to list view</string>
    <string name="click_here_to_switch_to_list_view">Click here to switch to list view</string>
    <string name="edit_your_trip">Edit your trip</string>
    <string name="tutorial_more_button_message">You can upload a cover photo, delete places, and add short comments if you wish.\nYou can also move to private mode, and only the people you shared this itinerary with will see it.</string>
    <string name="easily_share_it_with_others">Easily share it with others</string>
    <string name="tutorial_share_button_message">You can easily share your itinerary with others &amp; spread the wor(l)d!</string>
    <string name="add_like">Add \"like\"</string>
    <string name="tutorial_like_message">You can add like icon for the wow places of your trip</string>
    <string name="personal_comment">Personal comment</string>
    <string name="tutorial_comment_message">Add your personal touch to recommendations by adding comment</string>
    <string name="day">Day</string>
    <string name="photo_is_broken_or_without_any_location_data">Photo is broken or without any location data</string>
    <string name="photo_taken_in_another_place">Photo taken in another place</string>
    <string name="beender_would_like_to_access_your_photos">Beender would like to access your photos</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="access_explanation"><![CDATA[<b>Yes, We know.</b><br/>It\'s hard to trust apps these days.<br/>We share the same feelings.<br/><br/><b>BUT,</b> we promise we won\'t use the photos themselves, only their location and time to create your itinerary.]]></string>
    <string name="some_images_were_rejected">Some images ware rejected</string>
    <string name="dialog_btn_next">Next</string>
    <string name="your_partners_for_this_trip">Your partners for this trip...</string>
    <string name="how_was_this_trip_but_specifically">How was this trip, but specifically</string>
    <string name="describe_your_trip_by_tags">Describe your trip by #tags</string>
</resources>
