<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:clickable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_back_white" />

            <TextView
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/edit_profile"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_photo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@null"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions|textPersonName"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="2dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/write_something_about_yourself"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/places_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/beenders"
                android:textColor="@color/colorBlack"
                android:textSize="13sp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/places_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </LinearLayout>
</layout>